# YouDoub

./: .gitignore  CODEBUDDY.md  Makefile  README.md  cookies.json  create_bilingual_subs.py  diagnose_network.py  env.example  main.py  pyproject.toml  test_deepseek.py  test_translate_basic.py  todo.md
docs/: bilibili_upload.md  biliup_setup.md  translation_improvements.md
src/youdoub/: cli.py  config.py  paths.py
src/youdoub/bilibili/: cli.py
src/youdoub/subtitles/: translate.py
src/youdoub/utils/: hash.py  llm_adapters.py  logging.py  run.py
src/youdoub/youtube/: cli.py  downloader.py  subtitles.py
tests/: conftest.py
tests/unit/bilibili/: test_bili_submit.py
tests/unit/subtitles/: test_translate_basic.py  test_translate_improvements.py  test_translate_wholefile.py
