[project]
name = "youdoub"
version = "0.1.0"
description = "YouTube -> subtitle translate (Ollama) -> BiliBili upload (biliup) CLI pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "httpx>=0.27",
  "yt-dlp>=2024.10.22",
  "faster-whisper>=1.2.1",
  "openai>=2.14.0",
  "requests>=2.32.5",
]

[project.scripts]
youdoub = "youdoub.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]

[tool.uv]
package = true
